# LMPlayground

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
doc/: pipeline.md
src/config/: config.yaml
src/config/experiment/: qgru.yaml  qlstm.yaml  ttt.yaml
src/config/model/: qgru.yaml  qlstm.yaml  ttt.yaml
src/config/tokenizer/: elyza.yaml
src/config/train/: default.yaml
src/lm_playground/: dataset_streaming_test.py  generator.py  pipeline_trainer.py  predict.py  predict_chat.py  predict_chat_qgru.py  predict_chat_qlstm.py  predict_chat_ttt.py  predict_qlstm.py  predict_stream.py  predict_stream_qlstm.py  tokenizer_test.py  train.py  train_pipeline.py  train_qgru.py  train_qlstm.py  train_ttt.py  trainer.py
src/lm_playground/model/: qgru.py  qlstm.py  ttt.py
src/ml_playground/: predict.py  predict_stream.py  train.py  train_qlstm.py  trainer.py
src/ml_playground/model/: qlstm.py
