[project]
name = "lm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "numpy>=2.2.6",
    "schedulefree>=1.4.1",
    "torch>=2.7.0",
    "torchdata>=0.11.0",
    "transformers>=4.52.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
